# Multiverse

./: .gitignore  README.md  main.py  pyproject.toml
demo/: app.py
source/: pipeline.py  service.py
source/configs/: config.dev.yml
source/modules/: angel.py  demon.py  dragon.py  dryad.py  dwarf.py  elf.py  giant.py  gnome.py  goblin.py  god.py  test.py
source/modules/prompts/: prompt.py
source/schemas/: input.py
source/utils/: log_utils.py
